# news_scrapper_project

./: pyproject.toml
quotes_scrapper/: main.py
quotes_scrapper/app/: app.py
quotes_scrapper/app/scrapper/: scrapper.py
quotes_scrapper/app/utils/: web_extractor.py
quotes_scrapper/utils/: web_extractor.py
